Uploaded image for project: 'JDK'
  1. JDK
  2. JDK-8014972

Crash with specific values for -XX:InitialCodeCacheSize=500K -XX:ReservedCodeCacheSize=500k

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P4 P4
    • hs25
    • hs25
    • hotspot
    • b40

        Crash when starting up JVM with specific JVM arguments: -XX:InitialCodeCacheSize=500K -XX:ReservedCodeCacheSize=500k. Both, -client and -server are affected.

        The problem is in "AbstractICache::initialize()". BufferBlob::create() returns NULL.

        void AbstractICache::initialize() {
          // Making this stub must be FIRST use of assembler
          ResourceMark rm;

          BufferBlob* b = BufferBlob::create("flush_icache_stub", ICache::stub_size);
          CodeBuffer c(b);
          ICacheStubGenerator g(&c);
          g.generate_icache_flush(&_flush_icache_stub);

        ....

        }


              anoll Albert Noll (Inactive)
              anoll Albert Noll (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: