8014972: Crash with specific values for -XX:InitialCodeCacheSize=500K -XX:ReservedCodeCacheSize=500k

Introduce a minimum code cache size that guarantees that the VM can startup.

Reviewed-by: kvn, twisti